--- a/landing-page-boys.html
+++ b/landing-page-boys.html
@@ -8,7 +8,6 @@
 
 <body>
 
-<!-- Shop by Category -->
 <div class="shop_by_category">
 	<a class="category-item" href="#">
 		<img src="images/category-item1.jpg" class="img-fluid" alt="category_clothing" title="clothing">
@@ -45,34 +44,37 @@
 
 <!-- Shop by price && Shop by age -->
 
-<div class="shop">
-  	<div class="container">
-	    <div class="row">  
-			<div class="col-lg-4 col-md-4 col-sm-12">
-		   		<h2 class="title"> Shop By Price </h2>
-	         		<div class="kss-price">
-			             <a href="#" class="btn btn-primary">Below 500</a>
-			          	 <a href="#" class="btn btn-primary">Rs 500 to Rs 999</a>
-			          	 <a href="#" class="btn btn-primary">Rs 1000 to Rs 1499</a>
-			          	 <a href="#" class="btn btn-primary">Rs 1500 to Rs 1999</a>
-             		</div>
-	    	</div>
+<div class="shop_by_price">
+    <div class="row">  
+		<div class="col-lg-12 col-md-12 col-sm-12">
+	   		<h2 class="title"> Shop By Price </h2>
+         		<div class="kss-price">
+		             <a href="#" class="label-box__textarea"><img src="images/price-tag-1.png" alt="price tag" title="below Rs 500" class="img-fluid"></a>
+		          	 <a href="#" class="label-box__textarea"><img src="images/price-tag-2.png" alt="price tag" title="Rs 500 to Rs 999" class="img-fluid"></a>
+		          	 <a href="#" class="label-box__textarea"><img src="images/price-tag-3.png" alt="price tag" title="Rs 1000 to Rs 1499" class="img-fluid"></a>
+		          	 <a href="#" class="label-box__textarea"><img src="images/price-tag-4.png" alt="price tag" title="Rs 1500 to Rs 1999" class="img-fluid"></a>
+         		</div>
+    	</div>  
+	</div>
+</div>
 
-			<div class="col-lg-8 col-md-8 col-sm-12 center-block">
+<div class="shop_by_age">
+  	<div class="container">
+	    <div class="row">
 	     		<h2 class="title"> Shop By Age </h2>
 	      			<div class="kss-age">
-		    			<a class="card-img" href="#">
-		    				 <p class="card-text"> 0-7years</p>
-	             			<img src="images/age1.png" class="img-fluid" title="Ombre Print Full-Sleeves Shirt
-" alt="Ombre Print Full-Sleeves Shirt">
-	             			
-                 		</a>
-	       		 		<a class="card-img" href="#">  
-	       		 		    <p class="card-text"> 7-14years</p>
-	            			<img src="images/age2.png" class="img-fluid" title="Half Sleeves Polo T-Shirt
-" alt="Half Sleeves Polo T-Shirt">
-
-         				</a>
+	      			    <div class="col-lg-6 col-md-6 col-sm-12">
+			    			<a class="card-img" href="#">
+			    				<p class="card-text"> 2-7<br>Years</p>
+		             			<img src="images/age1.png" class="img-fluid" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt">	             		
+	                 		</a>
+	                 	</div>
+	                 	<div class="col-lg-6 col-md-6 col-sm-12">
+		       		 		<a class="card-img" href="#">  
+		       		 		    <p class="card-text"> 7-14<br>Years</p>
+		            			<img src="images/age2.png" class="img-fluid" title="Half Sleeves Polo T-Shirt" alt="Half Sleeves Polo T-Shirt">
+	         				</a>
+	         			</div>
        				</div>
      		</div>   
   		</div>
@@ -87,13 +89,11 @@
 		 		<div class="col-lg-6 col-md-6 col-sm-12">
 		 			<a href="#">
 		 			<img src="images/offer_1.jpg" class="img-fluid" alt="offers" title="super sale">
-		 			<p class="text-muted text-center"> EXPLORE</p>
 		 			</a>
 		 		</div>
 		 		<div class="col-lg-6 col-md-6 col-sm-12">
 		 			<a href="#">
 		 		    <img src="images/offer_2.jpg" class="img-fluid" alt="offers" title="summer sale">
-		 		    <p class="text-muted text-center"> EXPLORE</p>
 		 		    </a>
 		 		</div>
  		    </div>
@@ -105,7 +105,7 @@
 	<div class="container">
 		<h2 class="title">Featured Products</h2>
 			<div class="row">
-				<div class="col-lg-3 col-md-6 col-sm-12">
+				<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
 				    <a href="#" class="img-holder">
 						<figure class="figure product-card">
 						    <img src="images/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
@@ -113,7 +113,7 @@
 						</figure>
 				    </a>
 			    </div>
-			    <div class="col-lg-3 col-md-6 col-sm-12">
+			    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 				    <a href="#" class="img-holder">
 						<figure class="figure product-card">
 							<img src="images/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
@@ -121,7 +121,7 @@
 						</figure>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12">
+				<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 					<a href="#" class="img-holder">
 						<figure class="figure product-card">
 						    <img src="images/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
@@ -129,7 +129,7 @@
 						</figure>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12">
+				<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 					<a href="#" class="img-holder">
 						<figure class="figure product-card">
 							<img src="images/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
@@ -145,36 +145,33 @@
 <div class="brands">
 	<div class="container">
 		<h2 class="title">Brands</h2>
-		  	<a href="#">
-			    <figure class="figure mr-2">
-					<img src="images/brand1.jpg" class="img-fluid">
-					<figcaption class="figure-caption text-center">New Arrivals</figcaption>
-			    </figure>
-		    </a>
-		    <a href="#">
-			    <figure class="figure mr-2">
-				    <img src="images/brand-2.jpg" class="img-fluid">
-				  	<figcaption class="figure-caption text-center">New Arrivals</figcaption>
-			    </figure>
-			</a>
-		    <a href="#">
-			    <figure class="figure mr-2">
-				    <img src="images/brand-3.jpg" class="img-fluid">
-				    <figcaption class="figure-caption text-center">New Arrivals</figcaption>
-			    </figure>
-			</a>
-			<a href="#">
-			    <figure class="figure mr-2">
-				  	<img src="images/brand-3.jpg" class="img-fluid">
-				 	<figcaption class="figure-caption text-center">New Arrivals</figcaption>
-			    </figure>		   
-			</a>
-		    <a href="#">
-			    <figure class="figure mr-2">
-				  	<img src="images/brand-3.jpg" class="img-fluid">
-				  	<figcaption class="figure-caption text-center">New Arrivals</figcaption>
-			    </figure>
-			</a>
+			<div class="d-flex flex-md-nowrap flex-wrap">
+			  	<a href="#" class="white-hover">
+				    <figure class="figure mr-2">
+						<img src="images/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
+				    </figure>
+			    </a>
+			    <a href="#" class="white-hover">
+				    <figure class="figure mr-2">
+					    <img src="images/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
+				    </figure>
+				</a>
+			    <a href="#" class="white-hover">
+				    <figure class="figure mr-2">
+					    <img src="images/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
+				    </figure>
+				</a>
+				<a href="#" class="white-hover">
+				    <figure class="figure mr-2">
+					  	<img src="images/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
+				    </figure>		   
+				</a>
+			    <a href="#" class="white-hover">
+				    <figure class="figure mr-2">
+					  	<img src="images/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
+				    </figure>
+				</a>
+			</div>
 	</div>
 </div>
 
@@ -209,31 +206,31 @@
 
 	        <div class="col-lg-3 col-md-6 col-sm-6">
 	        	<a class="category-item d-lg-block d-sm-inline-block" href="#">
-			  		<img src="images/clothing_item1.jpg" class="d-block mx-auto img-fluid mb-lg-2">
-			  		<button class="btn btn-default">T-Shirts</button> 
+			  		<img src="images/clothing_item5.png" class="d-block mx-auto img-fluid mb-lg-2">
+			  		<button class="btn btn-default">Ethnic</button> 
 			  	</a>
 	  	    </div>
 	  	    <div class="col-lg-3 col-md-6 col-sm-6">
 	  	    	<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="images/clothing_item2.jpg" class="d-block mx-auto img-fluid mb-lg-2">
-					<button class="btn btn-default">Boy Shirt</button>
+					<img src="images/clothing_item6.png" class="d-block mx-auto img-fluid mb-lg-2">
+					<button class="btn btn-default">Jeans</button>
 				</a> 
 			</div>
 		 	<div class="col-lg-3 col-md-6 col-sm-6">
 		 		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="images/clothing_item3.jpg" class="d-block mx-auto img-fluid mb-lg-2">
-					<button class="btn btn-default">Bottoms</button> 
+					<img src="images/clothing_item7.png" class="d-block mx-auto img-fluid mb-lg-2">
+					<button class="btn btn-default">Sets & Suits</button> 
 				</a>
 			</div>
 		 	<div class="col-lg-3 col-md-6 col-sm-6">
 		 		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="images/clothing_item4.jpg" class="d-block mx-auto img-fluid mb-lg-2">
-					<button class="btn btn-default">Shoes</button> 
+					<img src="images/clothing_item8.png" class="d-block mx-auto img-fluid mb-lg-2">
+					<button class="btn btn-default">Jackets & Coats</button> 
 				</a>
 			</div>
 		</div>
-		<div class="kss-btn cd-discover">
-			<button class="btn btn-default"><a href="">View All</a></button>
+		<div class="cd-discover">
+			<button class="btn kss-btn"><a href="">View All</a></button>
 		</div>
     </div> 
 </div>
@@ -245,9 +242,11 @@
 	 		<div class="label-box__textarea">
 		 		<h4 class="label-box__title"> New Arrivals</h4>
 		 		<p class="label-box__subtitle"> Shop the latest new arrivals for boys with new styles added every week and from range of luxury designers.</p>
-		 		<a href="#" class="btn kss-btn cd-discover">
-		 			Discover
-		 		</a>
+		 		<div class="cd-discover">
+			 		<a href="#" class="btn kss-btn">
+			 			Discover
+			 		</a>
+			 	</div>
 		 	</div>
 	 	</div>
 	 	<div class="col-lg-6 col-md-6 col-sm-12 ">
